[project]
name = "laneiq"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "black>=24.0,<25.0",
    "celery>=5.4,<6.0",
    "dvc[s3]>=3.0,<4.0",
    "evidently>=0.4,<0.5",
    "fastapi>=0.111,<0.112",
    "httpx>=0.27,<0.28",
    "langchain>=0.2,<0.3",
    "langgraph>=0.2,<0.3",
    "langsmith>=0.1,<0.2",
    "loguru>=0.7,<0.8",
    "mlflow>=2.14,<3.0",
    "mypy>=1.10,<2.0",
    "numpy>=1.26,<2.0",
    "openai>=1.35,<2.0",
    "ortools>=9.10,<10.0",
    "pandas>=2.2,<3.0",
    "plotly>=5.22,<6.0",
    "pydantic>=2.7,<3.0",
    "pydantic-settings>=2.3,<3.0",
    "pytest>=8.2,<9.0",
    "pytest-asyncio>=0.23,<0.24",
    "python-dotenv>=1.0,<2.0",
    "pyyaml>=6.0,<7.0",
    "redis>=5.0,<6.0",
    "requests>=2.32,<3.0",
    "ruff>=0.5,<0.6",
    "scikit-learn>=1.5,<2.0",
    "streamlit>=1.36,<2.0",
    "uvicorn[standard]>=0.30,<0.31",
]
